--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^24.0.3",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "args": "^5.0.3"
   }
 }
