--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "args": "^5.0.3"
+    "args": "^5.0.3",
+    "colorette": "^2.0.20"
   }
 }
